supporting non-canonical

--- a/src/FiveLevelsOfMediaType/FiveLevelsOfMediaType.csproj
+++ b/src/FiveLevelsOfMediaType/FiveLevelsOfMediaType.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtendedMediaType.cs" />
+    <Compile Include="Extensions\OtherExtensions.cs" />
     <Compile Include="FiveLevelsOfMediaTypeFormatter.cs" />
     <Compile Include="FiveLevelsOfMediaTypeParameters.cs" />
     <Compile Include="Extensions\HttpConfigurationExtensions.cs" />
